01.提交线性表的头文件； 02.由于使用的是模板类所以类的实现只能在头文件中；

--- a/BaseStructures/BaseStructures.vcxproj.filters
+++ b/BaseStructures/BaseStructures.vcxproj.filters
@@ -24,6 +24,9 @@
     <ClInclude Include="HelloWorld.h">
       <Filter>Structure\Header</Filter>
     </ClInclude>
+    <ClInclude Include="LinearList.h">
+      <Filter>Structure\Header</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="HelloWorld.cpp">
