--- a/BaseStructures/BaseStructures.vcxproj
+++ b/BaseStructures/BaseStructures.vcxproj
@@ -65,6 +65,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="HelloWorld.h" />
+    <ClInclude Include="LinearList.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Common.cpp" />
