01.新建异常类头文件； 02.修改Delete功能和Insert功能；

--- a/BaseStructures/BaseStructures.vcxproj
+++ b/BaseStructures/BaseStructures.vcxproj
@@ -64,6 +64,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="Exceptions.h" />
     <ClInclude Include="HelloWorld.h" />
     <ClInclude Include="LinearList.h" />
   </ItemGroup>
